# LR7

Task_1/: CMakeLists.txt  Convert.cpp  Header.h  StringInput.cpp  main.cpp
Task_2/: Addition.cpp  CMakeLists.txt  Header.h  Reconvert.cpp  StrConvert.cpp  StringInput.cpp  main.cpp
Task_3/: Addition.cpp  CMakeLists.txt  Header.h  IntegerInput.cpp  Reconvert.cpp  SignCheck.cpp  SignInput.cpp  StrConvert.cpp  StringInput.cpp  Subtraction.cpp  main.cpp
Task_4/: CMakeLists.txt  DivisibilityCheck.cpp  Header.h  IntegerInput.cpp  StartAndEnd.cpp  main.cpp
Task_5/: Bochkas.cpp  CMakeLists.txt  Convert.cpp  Header.h  IntegerInput.cpp  Reconvert.cpp  StartAndEnd.cpp  main.cpp
